@@ -85,18 +85,21 @@ if ($delete_field) {
 		echo "<h3 class='suc'>".__('Field successfully deleted')."</h3>";	 
 }
 
-
-$table->width = '65%';
-$table->head = array ();
-$table->head[0] = __('Field');
-$table->head[1] = __('Display on front').print_help_tip (__('The fields with display on front enabled will be displayed into the agent details'), true);
-$table->head[2] = __('Actions');
-$table->align = array ();
-$table->align[1] = 'center';
-$table->align[2] = 'center';
-$table->data = array ();
-
 $fields = get_db_all_fields_in_table('tagent_custom_fields');
+
+if ($fields) {
+	$table->width = '65%';
+	$table->head = array ();
+	$table->head[0] = __('Field');
+	$table->head[1] = __('Display on front').print_help_tip (__('The fields with display on front enabled will be displayed into the agent details'), true);
+	$table->head[2] = __('Actions');
+	$table->align = array ();
+	$table->align[1] = 'center';
+	$table->align[2] = 'center';
+	$table->data = array ();
+} else {
+	echo '<div class="nf">'. __('No fields defined') .'</div>';
+}
 
 if($fields === false) $fields = array();
 
